fixed text area in home so text is visible

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -291,7 +291,7 @@ p {
 textarea {
   width: 100%;
   height: 250px;
-  border-radius: 30px;
+  border-radius: 5px;
   box-shadow: rgba(247, 105, 2, 1) 0px 1px 5px;
   border: none;
 }
